Filter search by relative path without user prefix